# narrowgate

./: .env.example  .gitignore  CHANGELOG.md  IMPROVEMENT_PLAN.md  Makefile  README.md  course-system.html  deploy.sh  deploy_production.sh  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  test_system.sh
.hermes/plans/: 2026-04-19_174139-late-night-monologue-mode.md
b2b/: README.md  app.py
b2b/templates/: student_portal.html
data/: books.json
data/courses/antifragile/: quiz.json
data/courses/antifragile/chapters/: ch01.md  ch02.md  ch03.md  ch04.md  ch05.md
data/courses/behavioral_reshape/: meta.json  quiz.json
data/courses/behavioral_reshape/chapters/: ch01.md  ch02.md  ch03.md  ch04.md  ch05.md  ch06.md
data/courses/evasion_anatomy/: meta.json  quiz.json
data/courses/evasion_anatomy/chapters/: ch01.md  ch02.md  ch03.md  ch04.md  ch05.md  ch06.md  ch07.md
data/courses/meaning_construction/: meta.json  quiz.json
data/courses/meaning_construction/chapters/: ch01.md  ch02.md  ch03.md  ch04.md  ch05.md
data/courses/narrow_gate_crossing/: quiz.json
data/courses/narrow_gate_crossing/chapters/: ch01.md  ch02.md  ch03.md  ch04.md  ch05.md
data/courses/pain_alchemy/: meta.json  quiz.json
data/courses/pain_alchemy/chapters/: ch01.md  ch02.md  ch03.md  ch04.md  ch05.md  ch06.md
data/courses/relationship_mirror/: quiz.json
data/courses/relationship_mirror/chapters/: ch01.md  ch02.md  ch03.md  ch04.md  ch05.md
data/courses/shadow_integration/: quiz.json
data/courses/shadow_integration/chapters/: ch01.md  ch02.md  ch03.md  ch04.md
data/courses/socratic_introspection/: quiz.json
data/courses/socratic_introspection/chapters/: ch01.md  ch02.md  ch03.md  ch04.md  ch05.md  ch06.md  ch07.md
data/courses/stoic_resilience/: quiz.json
data/courses/stoic_resilience/chapters/: ch01.md  (+4 more)
data/courses/systems_thinking/: meta.json  quiz.json
data/courses/witness_evolution/: quiz.json
docs/: ASSESSMENT_SYSTEM.md  COMMERCIAL_ASSESSMENT.md  COMMERCIAL_IMPROVEMENTS_SUMMARY.md  COMPETITIVE_ANALYSIS.md  COURSE_THEORY_MAPPING.md  DESIGN_IMPROVEMENTS.md  DESIGN_INSPIRATION.md  EXPERTS.md  EXPERT_SYSTEM.md  EXPERT_SYSTEM_COMPLETION.md  HANDOFF.md  I18N_PLAN.md  KNOWLEDGE_BASE.md  OTHER_SECTIONS_OPTIMIZATION_PLAN.md  POLISH_PLAN.md  POLISH_PLAN_v2.4.md  PRODUCTION_DEPLOY.md  SECONDFME_INTEGRATION_STATUS.md  SYSTEM_COMPLETE.md  THEORY.md  USER_FEEDBACK_PLAN.md  index.html
docs/archive/: DEPLOYMENT_CONFIRMATION.md  FINAL_SUMMARY.md  FINAL_TASK_COMPLETION.md  POLISH_PLAN.md  README_UPDATE.md  TOP_WEBSITE_PLAN.md  WORK_COMPLETION.md
scripts/: test_expert_system.py  update_frontend.py
sections/: hero-v2.html  hero.html
src/api/: expert_routes.py  main.py  middleware.py
src/core/: __init__.py  analytics.py  auth.py  course_content.py  courses.py  crossing.py  database.py  evolution.py  expert_agents.py  expert_profiles.py  gate_finder.py  logger.py  masters.py  mimo_challenges.py  mimo_client.py  monologue_prompts.py  payment.py  soul_audit.py  witness.py
src/ui/: fonts.css  index.html  index.html.backup  manifest.json  sw.js  tailwind.css  viewer.html
src/ui/js/: i18n.js
src/ui/locales/: en.json  i18n.json  zh.json
tests/: __init__.py  conftest.py  test_api.py  test_core.py  test_narrowgate.py
(+10 files in other folders)
